# bot_reminder

./: .env.example  .gitignore  README.md  alembic.ini  bot_reminder.pyproj  bot_reminder.sln  install_dev.py  justfile  justfile_linux  log_conf.development.yaml  log_conf.production.yaml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt
alembic/: env.py
alembic/versions/: 42c584ab1d61_initial_schema.py  801fea16a8f2_init_new_table.py  95f3307ef2b4_initial_schema.py  b6864277e278_initial_schema_without_user.py
app/: config.py
app/adapters/: __init__.py  aiogram_bot.py  vk_bot.py
app/commands/: __init__.py  base.py  cancel_reminder_cmd.py  create_reminder_cmd.py  help_cmd.py  list_reminders_cmd.py  start_cmd.py
app/controllers/: __init__.py
app/core/: __init__.py  bot.py  db.py  settings.py
app/database/: __init__.py  connection.py  models.py
app/dispatchers/: __init__.py  base.py  command_dispatcher.py  reminder_dispatcher.py
app/domain/: entities.py  interfaces.py  repeated_value.py
app/entities/: __init__.py  entities.py  platform.py  platform_entity.py  priority.py  priority_entity.py  reminder.py  reminder_entity.py  repeated_value.py  repeated_value_entity.py  status.py  status_entity.py
app/handlers/: message_handlers.py  reminder_handlers.py
app/mappers/: __init__.py  from_entity_to_model.py  from_model_to_entity.py
app/models/: __init__.py  reminder.py
app/parsers/: from_ru_to_eng_reminder_parts.py  reminder_datetime_parser.py  reminder_desc_parser.py  reminder_freq_parser.py  reminder_parser.py  reminder_priority_parser.py
(+78 files in other folders)
